[index] Add basic SEO meta tags & basic layout

--- a/index.html
+++ b/index.html
@@ -1,5 +1,45 @@
 <html>
+  <head>
+    <title>Tyler Adam Martinez</title>
+    <meta name="description" content="Tyler Adam Martinez's portfolio website">
+    <meta name="keywords" content="portfolio,resume,engineer,software">
+    <meta name="og:title" property="og:title" content="Tyler Adam Martinez's portfolio website">
+    <meta name="twitter:card" content="portfolio">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="https://TylerAdamMartinez.github.io/">
+  </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Howdy, I'm <mark><i>Tyler Adam Martinez</i></mark></h1>
+    <h2>I am <span class="animate_typed"></span></h2>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Education</li>
+        <li>Experience</li>
+        <li>Projects</li>
+        <li>Resume</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+    <h3>Quick Links</h3>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/tyleradammartinez/" hreflang="en-us">LinkedIn</a></li>
+      <li><a href="https://github.com/TylerAdamMartinez" hreflang="en-us">GitHub</a></li>
+    </ul>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script>
+    var typed = new Typed('.animate_typed', {
+      strings: [ 
+        "Coder",
+        "Developer",
+        "Engineer",
+      ],
+      backSpeed: 100,
+      typeSpeed: 100,
+      loop: true,
+    });
+  </script>
 </html>
