--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@
         <h1>About</h1>
         <nav class="nav-menu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li>Education</li>
-            <li>Experience</li>
-            <li>Projects</li>
-            <li>Resume</li>
-            <li>Contact</li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/education">Education</a></li>
+            <li><a href="/experience">Experience</a></li>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/assets/resume/resume2022.pdf">Resume</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </nav>
       </div>
