--- a/education.html
+++ b/education.html
@@ -16,8 +16,7 @@
     <div id="root"></div>
     <div id="home">
       <div id="hero">
-        <h1>Howdy,<br /> I'm <mark><i>Tyler Adam Martinez</i></mark></h1>
-        <h2>I am <span class="animate_typed"></span></h2>
+        <h1>Education</h1>
         <nav class="nav-menu">
           <ul>
             <li><a href="/">Home</a></li>
@@ -29,40 +28,7 @@
             <li><a href="/contact">Contact</a></li>
           </ul>
         </nav>
-        <ul class="social-links">
-          <li>
-            <a href="https://www.linkedin.com/in/tyleradammartinez/" hreflang="en-us">
-              <img alt="Linkedin" src="assets/img/linkedin.svg" />
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/TylerAdamMartinez" hreflang="en-us">
-              <img alt="GitHub" src="assets/img/github.svg" />
-            </a>
-          </li>
-        </ul>
       </div>
     </div>
-    <svg version="1.1" class="svg-filters" style="display:none;">
-      <defs>
-        <filter id="marker-shape">
-          <feTurbulence type="fractalNoise" baseFrequency="0 0.15" numOctaves="1" result="warp" />
-          <feDisplacementMap xChannelSelector="R" yChannelSelector="G" scale="30" in="SourceGraphic" in2="warp" />
-        </filter>
-      </defs>
-    </svg>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script>
-    var typed = new Typed('.animate_typed', {
-      strings: [ 
-        "a coder.",
-        "a developer.",
-        "an engineer.",
-      ],
-      backSpeed: 100,
-      typeSpeed: 100,
-      loop: true,
-    });
-  </script>
 </html>
